# exploringrpi

./: .gitignore  README.md
chp03/: HelloRPiSleep.c  helloRPiSleep
chp05/bashLED/: bashLED
chp05/boostPython/: build  erpi.cpp  test.py
chp05/cython/: setup.py  test.c  test.py  test.pyx
chp05/cython_exe/: build  test  test.c  test.pyx
chp05/environment/: environment  environment.cpp
chp05/javaLED/: LEDExample.java  build  run
chp05/luaLED/: luaLED.lua
chp05/makeLED/: build  makeLED  makeLED.c  makeLED.cpp  makeLEDC
chp05/makeLEDOOP/: build  makeLEDs  makeLEDs.cpp
chp05/makeLEDmulti/: build  makeLEDmulti  makeLEDmulti.cpp
chp05/nodejsLED/: nodejsLED.js
chp05/overview/: build  cppstrings  cstrings  helloworldcpp  operators  passing  pointerarray  pointers  pointers2  pointers2.c  short_static  shortcpp  sizeofvariables  void
chp05/performance/: build  n-body  n-body2  n-bodypi  nbody.hi  nbody_csharp  run  run_haskell
chp05/perlLED/: perlLED.pl
chp05/proc/: readUptime  readUptime.cpp  who  whologgedin.c
chp05/python2_C/: ERPiModule.cpp  build  test.py
chp05/python3_C/: ERPiModule.cpp  build  test.py
chp05/pythonLED/: python2LED.py  python3LED.py  pythonLED
chp05/syscall/: build  glibcTest  glibcTest.cpp
chp06/GPIO/: GPIO.cpp  simple.cpp
chp06/GPIOpython/: GPIO.cpp  GPIO.h  build  simple  simple.py
chp06/bits/: bits
chp06/callback/: callback  callback.cpp
chp06/dht/: dht  dht.cpp
chp06/flash_script/: flash.sh
chp07/: test  test.cpp  testrpi.cpp
chp09/: spiADC
chp10/libexample/: CMakeLists.txt  libtest.cpp
(+339 files in other folders)
